--- a/apilog/src/main/AndroidManifest.xml
+++ b/apilog/src/main/AndroidManifest.xml
@@ -1,1 +1,4 @@
-<manifest package="com.hoverdroids.apilog"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.hoverdroids.apilog">
+
+</manifest>
