--- a/Demo/build.gradle
+++ b/Demo/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.hoverdroids.apilogdemo"
+        applicationId "com.hoverdroids.apilog.demo"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
